[package]
name = "savedata-backup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
directories = "5.0.1"
fs_extra = "1.3.0"
getopts = "0.2.21"
glob = "0.3.1"
tar = "0.4.40"
walkdir = "2.4.0"
